--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
