--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_BASE_API_URL_LOCAL=http://localhost:3000/api/
-VITE_BASE_API_URL=https://sirtik.vercel.app/api/
+VITE_BASE_API_URL=
 
+https://sirtik.vercel.app/api/
